isl-rs/src/ast.rs


extern "C" {
  pub fn isl_options_set_ast_iterator_type(ctx: CtxRef, val: Option<CStr>) -> Stat;
  pub fn isl_options_get_ast_iterator_type(ctx: CtxRef) -> Option<CStr>;
  pub fn isl_options_set_ast_always_print_block(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_ast_always_print_block(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_ast_print_outermost_block(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_ast_print_outermost_block(ctx: CtxRef) -> c_int;
  pub fn isl_ast_expr_from_val(v: Val) -> Option<AstExpr>;
  pub fn isl_ast_expr_from_id(id: Id) -> Option<AstExpr>;
  pub fn isl_ast_expr_neg(expr: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_add(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_sub(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_mul(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_div(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_pdiv_q(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_pdiv_r(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_and(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_and_then(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_or(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_or_else(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_le(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_lt(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_ge(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_gt(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_eq(expr1: AstExpr, expr2: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_access(array: AstExpr, indices: AstExprList) -> Option<AstExpr>;
  pub fn isl_ast_expr_call(function: AstExpr, arguments: AstExprList) -> Option<AstExpr>;
  pub fn isl_ast_expr_address_of(expr: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_copy(expr: AstExprRef) -> Option<AstExpr>;
  pub fn isl_ast_expr_free(expr: AstExpr) -> *mut c_void;
  pub fn isl_ast_expr_get_ctx(expr: AstExprRef) -> Option<CtxRef>;
  pub fn isl_ast_expr_get_type(expr: AstExprRef) -> AstExprType;
  pub fn isl_ast_expr_int_get_val(expr: AstExprRef) -> Option<Val>;
  pub fn isl_ast_expr_get_val(expr: AstExprRef) -> Option<Val>;
  pub fn isl_ast_expr_id_get_id(expr: AstExprRef) -> Option<Id>;
  pub fn isl_ast_expr_get_id(expr: AstExprRef) -> Option<Id>;
  pub fn isl_ast_expr_op_get_type(expr: AstExprRef) -> AstExprOpType;
  pub fn isl_ast_expr_get_op_type(expr: AstExprRef) -> AstExprOpType;
  pub fn isl_ast_expr_op_get_n_arg(expr: AstExprRef) -> c_int;
  pub fn isl_ast_expr_get_op_n_arg(expr: AstExprRef) -> c_int;
  pub fn isl_ast_expr_op_get_arg(expr: AstExprRef, pos: c_int) -> Option<AstExpr>;
  pub fn isl_ast_expr_get_op_arg(expr: AstExprRef, pos: c_int) -> Option<AstExpr>;
  pub fn isl_ast_expr_set_op_arg(expr: AstExpr, pos: c_int, arg: AstExpr) -> Option<AstExpr>;
  pub fn isl_ast_expr_is_equal(expr1: AstExprRef, expr2: AstExprRef) -> Bool;
  pub fn isl_ast_expr_substitute_ids(expr: AstExpr, id2expr: IdToAstExpr) -> Option<AstExpr>;
  pub fn isl_printer_print_ast_expr(p: Printer, expr: AstExprRef) -> Option<Printer>;
  pub fn isl_ast_expr_dump(expr: AstExprRef) -> ();
  pub fn isl_ast_expr_to_str(expr: AstExprRef) -> Option<CString>;
  pub fn isl_ast_expr_to_C_str(expr: AstExprRef) -> Option<CString>;
  pub fn isl_ast_node_alloc_user(expr: AstExpr) -> Option<AstNode>;
  pub fn isl_ast_node_copy(node: AstNodeRef) -> Option<AstNode>;
  pub fn isl_ast_node_free(node: AstNode) -> *mut c_void;
  pub fn isl_ast_node_get_ctx(node: AstNodeRef) -> Option<CtxRef>;
  pub fn isl_ast_node_get_type(node: AstNodeRef) -> AstNodeType;
  pub fn isl_ast_node_set_annotation(node: AstNode, annotation: Id) -> Option<AstNode>;
  pub fn isl_ast_node_get_annotation(node: AstNodeRef) -> Option<Id>;
  pub fn isl_ast_node_for_get_iterator(node: AstNodeRef) -> Option<AstExpr>;
  pub fn isl_ast_node_for_get_init(node: AstNodeRef) -> Option<AstExpr>;
  pub fn isl_ast_node_for_get_cond(node: AstNodeRef) -> Option<AstExpr>;
  pub fn isl_ast_node_for_get_inc(node: AstNodeRef) -> Option<AstExpr>;
  pub fn isl_ast_node_for_get_body(node: AstNodeRef) -> Option<AstNode>;
  pub fn isl_ast_node_for_is_degenerate(node: AstNodeRef) -> Bool;
  pub fn isl_ast_node_if_get_cond(node: AstNodeRef) -> Option<AstExpr>;
  pub fn isl_ast_node_if_get_then_node(node: AstNodeRef) -> Option<AstNode>;
  pub fn isl_ast_node_if_get_then(node: AstNodeRef) -> Option<AstNode>;
  pub fn isl_ast_node_if_has_else_node(node: AstNodeRef) -> Bool;
  pub fn isl_ast_node_if_has_else(node: AstNodeRef) -> Bool;
  pub fn isl_ast_node_if_get_else_node(node: AstNodeRef) -> Option<AstNode>;
  pub fn isl_ast_node_if_get_else(node: AstNodeRef) -> Option<AstNode>;
  pub fn isl_ast_node_block_get_children(node: AstNodeRef) -> Option<AstNodeList>;
  pub fn isl_ast_node_mark_get_id(node: AstNodeRef) -> Option<Id>;
  pub fn isl_ast_node_mark_get_node(node: AstNodeRef) -> Option<AstNode>;
  pub fn isl_ast_node_user_get_expr(node: AstNodeRef) -> Option<AstExpr>;
  pub fn isl_ast_node_foreach_descendant_top_down(node: AstNodeRef, fn_: unsafe extern "C" fn(node: AstNodeRef, user: *mut c_void) -> Bool, user: *mut c_void) -> Stat;
  pub fn isl_printer_print_ast_node(p: Printer, node: AstNodeRef) -> Option<Printer>;
  pub fn isl_ast_node_dump(node: AstNodeRef) -> ();
  pub fn isl_ast_node_to_str(node: AstNodeRef) -> Option<CString>;
  pub fn isl_ast_print_options_alloc(ctx: CtxRef) -> Option<AstPrintOptions>;
  pub fn isl_ast_print_options_copy(options: AstPrintOptionsRef) -> Option<AstPrintOptions>;
  pub fn isl_ast_print_options_free(options: AstPrintOptions) -> *mut c_void;
  pub fn isl_ast_print_options_get_ctx(options: AstPrintOptionsRef) -> Option<CtxRef>;
  pub fn isl_ast_print_options_set_print_user(options: AstPrintOptions, print_user: unsafe extern "C" fn(p: Printer, options: AstPrintOptions, node: AstNodeRef, user: *mut c_void) -> Option<Printer>, user: *mut c_void) -> Option<AstPrintOptions>;
  pub fn isl_ast_print_options_set_print_for(options: AstPrintOptions, print_for: unsafe extern "C" fn(p: Printer, options: AstPrintOptions, node: AstNodeRef, user: *mut c_void) -> Option<Printer>, user: *mut c_void) -> Option<AstPrintOptions>;
  pub fn isl_options_set_ast_print_macro_once(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_ast_print_macro_once(ctx: CtxRef) -> c_int;
  pub fn isl_ast_expr_foreach_ast_expr_op_type(expr: AstExprRef, fn_: unsafe extern "C" fn(type_: AstExprOpType, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_ast_expr_foreach_ast_op_type(expr: AstExprRef, fn_: unsafe extern "C" fn(type_: AstExprOpType, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_ast_node_foreach_ast_expr_op_type(node: AstNodeRef, fn_: unsafe extern "C" fn(type_: AstExprOpType, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_ast_node_foreach_ast_op_type(node: AstNodeRef, fn_: unsafe extern "C" fn(type_: AstExprOpType, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_ast_expr_op_type_set_print_name(p: Printer, type_: AstExprOpType, name: Option<CStr>) -> Option<Printer>;
  pub fn isl_ast_op_type_set_print_name(p: Printer, type_: AstExprOpType, name: Option<CStr>) -> Option<Printer>;
  pub fn isl_ast_expr_op_type_print_macro(type_: AstExprOpType, p: Printer) -> Option<Printer>;
  pub fn isl_ast_op_type_print_macro(type_: AstExprOpType, p: Printer) -> Option<Printer>;
  pub fn isl_ast_expr_print_macros(expr: AstExprRef, p: Printer) -> Option<Printer>;
  pub fn isl_ast_node_print_macros(node: AstNodeRef, p: Printer) -> Option<Printer>;
  pub fn isl_ast_node_print(node: AstNodeRef, p: Printer, options: AstPrintOptions) -> Option<Printer>;
  pub fn isl_ast_node_for_print(node: AstNodeRef, p: Printer, options: AstPrintOptions) -> Option<Printer>;
  pub fn isl_ast_node_if_print(node: AstNodeRef, p: Printer, options: AstPrintOptions) -> Option<Printer>;
  pub fn isl_ast_node_to_C_str(node: AstNodeRef) -> Option<CString>;
  pub fn isl_ast_expr_list_get_ctx(list: AstExprListRef) -> Option<CtxRef>;
  pub fn isl_ast_expr_list_from_ast_expr(el: AstExpr) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_alloc(ctx: CtxRef, n: c_int) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_copy(list: AstExprListRef) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_free(list: AstExprList) -> *mut c_void;
  pub fn isl_ast_expr_list_add(list: AstExprList, el: AstExpr) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_insert(list: AstExprList, pos: c_uint, el: AstExpr) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_drop(list: AstExprList, first: c_uint, n: c_uint) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_clear(list: AstExprList) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_swap(list: AstExprList, pos1: c_uint, pos2: c_uint) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_reverse(list: AstExprList) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_concat(list1: AstExprList, list2: AstExprList) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_size(list: AstExprListRef) -> c_int;
  pub fn isl_ast_expr_list_n_ast_expr(list: AstExprListRef) -> c_int;
  pub fn isl_ast_expr_list_get_at(list: AstExprListRef, index: c_int) -> Option<AstExpr>;
  pub fn isl_ast_expr_list_get_ast_expr(list: AstExprListRef, index: c_int) -> Option<AstExpr>;
  pub fn isl_ast_expr_list_set_ast_expr(list: AstExprList, index: c_int, el: AstExpr) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_foreach(list: AstExprListRef, fn_: unsafe extern "C" fn(el: AstExpr, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_ast_expr_list_every(list: AstExprListRef, test: unsafe extern "C" fn(el: AstExprRef, user: *mut c_void) -> Bool, user: *mut c_void) -> Bool;
  pub fn isl_ast_expr_list_map(list: AstExprList, fn_: unsafe extern "C" fn(el: AstExpr, user: *mut c_void) -> Option<AstExpr>, user: *mut c_void) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_sort(list: AstExprList, cmp: unsafe extern "C" fn(a: AstExprRef, b: AstExprRef, user: *mut c_void) -> c_int, user: *mut c_void) -> Option<AstExprList>;
  pub fn isl_ast_expr_list_foreach_scc(list: AstExprListRef, follows: unsafe extern "C" fn(a: AstExprRef, b: AstExprRef, user: *mut c_void) -> Bool, follows_user: *mut c_void, fn_: unsafe extern "C" fn(scc: AstExprList, user: *mut c_void) -> Stat, fn_user: *mut c_void) -> Stat;
  pub fn isl_ast_expr_list_to_str(list: AstExprListRef) -> Option<CString>;
  pub fn isl_printer_print_ast_expr_list(p: Printer, list: AstExprListRef) -> Option<Printer>;
  pub fn isl_ast_expr_list_dump(list: AstExprListRef) -> ();
  pub fn isl_ast_node_list_get_ctx(list: AstNodeListRef) -> Option<CtxRef>;
  pub fn isl_ast_node_list_from_ast_node(el: AstNode) -> Option<AstNodeList>;
  pub fn isl_ast_node_list_alloc(ctx: CtxRef, n: c_int) -> Option<AstNodeList>;
  pub fn isl_ast_node_list_copy(list: AstNodeListRef) -> Option<AstNodeList>;
  pub fn isl_ast_node_list_free(list: AstNodeList) -> *mut c_void;
  pub fn isl_ast_node_list_add(list: AstNodeList, el: AstNode) -> Option<AstNodeList>;
  pub fn isl_ast_node_list_insert(list: AstNodeList, pos: c_uint, el: AstNode) -> Option<AstNodeList>;
  pub fn isl_ast_node_list_drop(list: AstNodeList, first: c_uint, n: c_uint) -> Option<AstNodeList>;
  pub fn isl_ast_node_list_clear(list: AstNodeList) -> Option<AstNodeList>;
  pub fn isl_ast_node_list_swap(list: AstNodeList, pos1: c_uint, pos2: c_uint) -> Option<AstNodeList>;
  pub fn isl_ast_node_list_reverse(list: AstNodeList) -> Option<AstNodeList>;
  pub fn isl_ast_node_list_concat(list1: AstNodeList, list2: AstNodeList) -> Option<AstNodeList>;
  pub fn isl_ast_node_list_size(list: AstNodeListRef) -> c_int;
